added author and title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-	<title>Javascript Demo</title>
+	<meta name="author" content="Eli Byers">
+	<title>Scrolling Text</title>
 	<style>
 		body {
 			background-color:black;
